Dev_mythip@capgemini.com_17Dec_ForGitSync/src/objects/Dependent__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dependent_Type__c</fullName>
        <label>Dependent Type</label>
        <picklist>
            <picklistValues>
                <fullName>Wife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Husband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Dependents</relationshipLabel>
        <relationshipName>Dependents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Dependent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dependent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dependents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>